<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/vvvv"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/title_color" />

    <RelativeLayout
        android:id="@+id/rl_picture_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/vvvv"
        android:background="@color/title_color"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/picture_left_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:padding="10dp"
            android:src="@drawable/album_picture_back" />

        <TextView
            android:id="@+id/picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawableEnd="@drawable/album_arrow_down"
            android:drawablePadding="2dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxEms="11"
            android:padding="6dp"
            android:text="@string/img_and_video"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/picture_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/rl_bottom"
        android:layout_below="@id/rl_picture_title"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:lineSpacingExtra="3dp"
        android:text="@string/You_can_use_your_camera_to_take_photos_or_videos"
        android:textColor="#9b9b9b"
        android:textSize="18sp"
        android:visibility="invisible" />

    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/picture_id_preview"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_centerVertical="true"
            android:enabled="false"
            android:gravity="left|center"
            android:paddingStart="12dp"
            android:text="@string/image_preview"
            android:textColor="@color/picture_preview_text_color"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <TextView
            android:id="@+id/picture_tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/picture_id_preview"
            android:gravity="center"
            android:paddingStart="12dp"
            android:text="@string/editor"
            android:textColor="@color/picture_preview_text_color"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />


        <TextView
            android:id="@+id/picture_tv_img_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/picture_tv_ok"
            android:background="@drawable/album_num_oval"
            android:gravity="center"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/picture_tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:text="@string/send"
            android:textColor="@color/picture_preview_text_color"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />

    </RelativeLayout>
</RelativeLayout>
