<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/btn_common"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/file_no_read_pressed"
            android:text="@string/Common_file"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_all"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:background="@drawable/file_already_read"
            android:text="@string/The_local_file"
            android:textColor="@color/title_color"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fl_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/select_filesize"
            android:gravity="center_vertical"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/title_color"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:text="@string/confirm_filenum"
            android:paddingRight="10dp"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
