<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@xml/dialogue_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
        <!--显示歌曲状态-->
        <TextView
            android:id="@+id/tv_musicStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_audio"
            android:textColor="#666666"
            android:textSize="14sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|center_vertical">

            <!--显示当前进度-->
            <TextView
                android:id="@+id/tv_musicTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/c0000"
                android:textColor="#666666"
                android:textSize="13sp" />


            <SeekBar
                android:id="@+id/musicSeekBar"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/tv_musicTime"
                android:max="100"
                android:maxHeight="4.0dp"
                android:minHeight="4.0dp"
                android:progressDrawable="@xml/audio_dlg_layer_progress"
                android:thumb="@xml/audio_sb_thumb"
                android:thumbOffset="0dp" />

            <!--显示总进度-->
            <TextView
                android:id="@+id/tv_musicTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/musicSeekBar"
                android:text="@string/c0000"
                android:textColor="#666666"
                android:textSize="13sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_PlayPause"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:background="@xml/audio_dlg_btn_bg"
                android:gravity="center"
                android:text="@string/play_audio"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_Stop"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@xml/audio_dlg_btn_bg"
                android:gravity="center"
                android:text="@string/stop_audio"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_Quit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="25dp"
                android:layout_weight="1"
                android:background="@xml/audio_dlg_btn_bg"
                android:gravity="center"
                android:text="@string/quit_audio"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>

