<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    android:orientation="vertical">

    <View
        android:id="@+id/picture_v"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:background="@color/title_color" />

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/title_color">

        <ImageView
            android:id="@+id/picture_left_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/desc"
            android:padding="10dp"
            android:src="@drawable/album_picture_back" />

        <TextView
            android:id="@+id/picture_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:ellipsize="end"
            android:maxEms="11"
            android:text="@string/img_and_video"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_check"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/check"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/album_picture_checkbox_selector"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp" />
        </LinearLayout>
    </RelativeLayout>


    <com.hg.lib.album.view.PreviewViewPager
        android:id="@+id/preview_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/select_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_img_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/tv_ok"
            android:background="@drawable/album_num_oval"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:gravity="center"
            android:paddingEnd="12dp"
            android:text="@string/Please_select"
            android:textColor="@color/picture_preview_text_color"
            android:textSize="14sp"
            tools:ignore="RtlSymmetry" />
    </RelativeLayout>
</LinearLayout>